* about me / experience/projects / skills sections added * Menu updated * about me content updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Amira Chebbi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -65,9 +65,15 @@
 							<div class="content">
 								<div class="inner">
 									<h2 class="text-xl font-bold pb-4">About me</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Hey! I'm Amira , a software engineer based in Germany.
+										I’d introduce myself as a dreamer.
+										I dream of working on applications billions of people use,
+										having an impact on the world with my work.
+										I constantly seek out innovative solutions to everyday problems and always try to earn new knowledge .
+
+										</p>
 									<ul class="actions pt-12">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="aboutme.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,7 +85,7 @@
 									<h2 class="text-xl font-bold pb-4">Projects</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions pt-12">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="projects.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -91,7 +97,7 @@
 									<h2 class="text-xl font-bold pb-4">Experience</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions pt-12">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="experience.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -136,7 +142,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="skills.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
