* projects , experience content update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2 class="text-xl font-bold pb-4">Projects</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>I use my passion and skills to create digital products and innovative solutions </p>
 									<ul class="actions pt-12">
 										<li><a href="projects.html" class="button">Learn more</a></li>
 									</ul>
@@ -95,7 +95,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2 class="text-xl font-bold pb-4">Experience</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Let's have a look on few experiences if you want to know more about me</p>
 									<ul class="actions pt-12">
 										<li><a href="experience.html" class="button">Learn more</a></li>
 									</ul>
