--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2 class="text-xl font-bold pb-4">Experience</h2>
-									<p>Let's have a look on few experiences if you want to know more about me</p>
+									<p>If you want to know more about me , Let's have a look on few experiences </p>
 									<ul class="actions pt-12">
 										<li><a href="experience.html" class="button">Learn more</a></li>
 									</ul>
@@ -106,36 +106,36 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>My skills</h2>
-							<p class="mt-8">Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p class="mt-8">Thanks to my studies and my professional experience I was able to earn strong skills in various Domains</p>
 							<div class="mt-16 features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Programming skills</h3>
+									<h3>Software Engineering</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Web Development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>Mobile development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<h3>Data Mining and Machine Learning</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
+									<h3>Natural Lnaguage Processing</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
+									<h3>Entrepreneurship and Innovation</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
