--- a/index.html
+++ b/index.html
@@ -117,38 +117,38 @@
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Web Development</h3>
-									<p>In the last years I had the opportunity to work on real web development projects.Actually,
-										it is a long process starting from web design , building the website , data  management and ending by maintenance </p>
+									<p class="fa-align-justify">In the last years I had the opportunity to work on real web development projects.Actually,
+										it is a long process starting from web design , building the website , data  management and ending by maintenance. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Mobile development</h3>
-									<p>Three years ago , I discovered my passion for creating mobile solutions .
+									<p class="fa-align-justify">Three years ago , I discovered my passion for creating mobile solutions .
 										There is a strong feeling of pride , when you see your application being used by millions of people and help the to solve problems. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Data Mining and Machine Learning</h3>
-									<p>Thanks to my studies I had the opportunity to get strong knowledge in Data Mining and Machine learning .
-										I had also the opportunity to work on projects and participate in challenges</p>
+									<p class="fa-align-justify">Thanks to my studies I had the opportunity to get strong knowledge in Data Mining and Machine learning .
+										I had also the opportunity to work on projects and participate in challenges.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Natural Language Processing</h3>
-									<p>Since my first year at the university , I was always asking myself how does search engines find the best results for our queries .
+									<p class="fa-align-justify">Since my first year at the university , I was always asking myself how does search engines find the best results for our queries .
 										And then I discovered the NLP domain, and I had the possibility to answer all the unclear things that went to my mind.
 									Now I always tried to be up-to-date in the NLP domain and to work on real projects. </p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>Entrepreneurship and Innovation</h3>
-									<p>Entrepreneurship and innovation became the keys for our survive in our world. It is so important to have technical skills .
+									<p class="fa-align-justify">Entrepreneurship and innovation became the keys for our survive in our world. It is so important to have technical skills .
 										But I have to admit that without creativity and without basic knowledge in those domains you will find yourself at the end of the ranking list.  </p>
 								</section>
 							</div>
-							<ul class="actions">
+							<!--<ul class="actions">
 								<li><a href="skills.html" class="button">Learn more</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
