--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
@@ -37,11 +39,57 @@
     <!-- Main -->
     <section id="main" class="wrapper">
         <div class="inner">
-            <h1 class="major">My Projects</h1>
-            <span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-            <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+            <h1 class="major text-2xl">My Projects</h1>
+<div class=" grid grid-cols-1  gap-8">
+    <div class="grid grid-cols-1 md:grid-cols-2  rounded-lg shadow-xl border border-gray-200">
+        <div class=" ">
+                <img class="rounded-lg" src="./images/drivingSchool.PNG" >
+</div>
+        <div class="">
+            <p class="text-2xl font-semmibold text-center text-indigo-200 p-8 ">Web and Mobile Applications for Driving Schools </p>
+            <p class="px-6 pb-2 text-justify">Let your students book appointments, classes, or packages, fill out intake forms, add appointments to their calendar, receive confirmation and reminder notifications, and reschedule, cancel, and pay for appointments automatically.
+                Numerous functions facilitate detailed administrative input anytime and anywhere. Using a smartphone or PC, data can be accessed both locally, and via the cloud.</p>
+
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Technologies :</span><br>Laravel ( Backend ) , Angular ( Front-End ) , Android (Mobile App) , Web Services</p>
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Project Management tools :</span><br>Gitlab , Slack , Trello</p>
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Team :</span><br>Agile SCRUM Team </p>
+            <span class="pl-6 pr-2 pb-2  icon brands fa-github "> </span><span class="font-bold text-indigo-400">Github Repository : </span><a href="https://github.com/amira-98/DrivingSchool" class="text-sm">https://github.com/amira-98/DrivingSchool</a>
+
         </div>
+    </div>
+
+
+    <div class="grid grid-cols-1 md:grid-cols-2 rounded-lg shadow-xl border border-gray-200">
+        <div class=" ">
+            <img class="rounded-lg" src="./images/LibrairyManagement.PNG" >
+        </div>
+        <div class="">
+            <p class="text-2xl font-semmibold text-center text-indigo-200 p-8 ">Web and Mobile Applications for the management of libraries </p>
+            <p class="px-6 pb-2 text-justify">The software is developed to make a record of Book purchasing, book searching, book issuing and rent, book returned, catalogs, stock creation, all other fine books, popular and bestsellers and other Library related works.
+                The aim of the project is to make the manual handling of Library system into computerized system which includes all above features.
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Technologies :</span><br>JEE ( Backend ) , Angular ( Front-End ) , Android (Mobile App) , Web Services</p>
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Project Management tools :</span><br>Gitlab  , Trello</p>
+            <span class="pl-6  pr-2 pb-2  icon brands fa-github "> </span><span class="font-bold text-indigo-400">Github Repository : </span><a href="https://github.com/amira-98/LibraryManagement" class=" text-sm" >https://github.com/amira-98/LibraryManagement</a>
+
+
+        </div>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 	 rounded-lg shadow-xl border border-gray-200">
+        <div class=" ">
+            <img class="rounded-lg" src="./images/cop.jpg" >
+        </div>
+        <div class="">
+            <p class="text-2xl font-semmibold text-center text-indigo-200 p-8 ">New Programming Language</p>
+            <p class="px-6 pb-2 text-justify">conception and development of a new programming language</p>
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Technologies :</span><br>MPS (IntelliJ)</p>
+            <p class="px-6 pb-2 text-justify"><span class="font-bold text-indigo-400">Project Management tools :</span><br>Gitlab, Trello</p>
+            <span class="pl-6 pr-2 pb-2  icon brands fa-github "> </span><span class="font-bold text-indigo-400">Github Repository : </span><a href="https://github.com/amira-98/progLangImp" class="text-sm  ">https://github.com/amira-98/progLangImp</a>
+
+        </div>
+    </div>
+</div>
+
+
     </section>
 
 </div>
