* about me section

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <link rel="icon" href="./images/iconNav.PNG?">
 
@@ -24,8 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html" class="active">About me</a></li>
             <li><a href="projects.html" >Projects</a></li>
-            <li><a href="experience.html" >experience</a></li>
-            <li><a href="skills.html" >skills</a></li>
+
 
 
 
@@ -39,11 +39,92 @@
     <!-- Main -->
     <section id="main" class="wrapper">
         <div class="inner">
-            <h1 class="major">About Me</h1>
-            <span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-            <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-        </div>
+                <div class="mx-auto sm:text-center lg:max-w-2xl">
+                    <div class="max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12">
+                        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold leading-none tracking-tight text-white sm:text-4xl md:mx-auto">
+
+                           Hello ! I am Amira .
+                        </h2>
+                    <div class="pt-8 grid grid-cols-2">
+                    <div class="mb-4 transition-shadow duration-300 hover:shadow-xl lg:mb-6">
+                        <img class=" h-56 rounded shadow-lg sm:h-64 md:h-80 lg:h-96" src="./images/me.jpg" alt="" />
+                    </div>
+                        <p class="pt-8 text-base text-justify text-white md:text-lg">
+                            I am a software engineer based in germany. <br>
+                            I am dedicated to develop solutions that leverage on best practice technologies to deliver over the top user experience.
+
+                        </p>
+                        </div>
+                        <div>
+                            <h1 class="major text-left pt-16 mb-6  text-3xl font-bold  text-white sm:text-4xl ">
+                                CAREER SUMMARY
+                            </h1>
+                            <div class="grid grid-cols-3">
+                                <div class="col-span-2">
+                                    <span class="text-left text-lg font-bold text-white">FullStack Developer at  SkSoftware </span>
+                                    <span class="text-md text-left text-gray-400">04/2021 - now </span><br>
+                                    <span class="text-md text-left text-white">Design, development and maintenance of
+Websites for galleries</span>
+                                </div>
+                                <div>
+                                    <img class="pl-24 "  src="images/skSoftware.png">
+                                </div>
+                            </div>
+                            <hr class="w-full my-6 border-gray-300" />
+                            <div class="grid grid-cols-3">
+                                <div class="col-span-2">
+                                    <span class="text-left text-lg font-bold text-white">FullStack Developer at  oneVcard GmbH </span>
+                                    <span class="text-md text-left text-gray-400">10/2020 - 12/2020 </span><br>
+                                    <span class="text-md text-left text-white">Digitalization of visit cards </span>
+                                </div>
+                                <div>
+                                    <img class="pl-24 "  src="images/oneVcard.svg">
+                                </div>
+                            </div>
+                            <hr class="w-full my-6 border-gray-300" />
+
+                                <div class="grid grid-cols-3">
+                                    <div class="col-span-2">
+                                        <span class="text-left text-lg font-bold text-white">Web and Mobile Developer ( Internship) at Formalab </span>
+                                        <span class="text-md text-left text-gray-400">02/2019 - 06/2019 </span><br>
+                                        <span class="text-md text-left text-white">Design and development of a web and mobile application for the management of a driving school </span>
+                                    </div>
+                                    <div>
+                                        <img class="pl-24 " src="images/formalab.png">
+                                    </div>
+                                </div>
+                        </div>
+                        <div>
+                        <h1 class="major text-left pt-16 mb-6  text-3xl font-bold  text-white sm:text-4xl ">
+
+                            Education
+                        </h1>
+                        <div class="grid grid-cols-3">
+                        <div class="col-span-2">
+                        <span class="text-left text-lg font-bold text-white"> Technical university of Darmstadt  :  </span>
+                        <span class="text-lg text-white"> Master of Science in Computer Science</span><br>
+                        <span class="text-md text-left text-gray-400">Enrolled since September 2020 to present</span>
+                        </div>
+                            <div>
+                                <img class="pl-24 "  src="images/tu_darmstadt-logo.png">
+                            </div>
+                        </div>
+                        <hr class="w-full my-6 border-gray-300" />
+                        <div class="grid grid-cols-3">
+                            <div class="col-span-2">
+                                <span class="text-left text-lg font-bold text-white">Higher Institut of Management in Tunis :  </span>
+                                <span class="text-lg text-white"> Bachelor of Science in IT Management</span><br>
+                                <span class="text-md text-left text-gray-400">Enrolled since September 2020 to present</span>
+                            </div>
+                            <div>
+                                <img class="pl-24 "  src="images/logo-isg-tunis.svg">
+                            </div>
+                        </div>
+                        </div>
+
+
+                    </div>
+                </div></div>
     </section>
 
 </div>
