--- a/aboutme.html
+++ b/aboutme.html
@@ -22,9 +22,9 @@
     <a href="index.html" class="title">Amira Chebbi</a>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutme.html" class="active">About me</a></li>
-            <li><a href="projects.html" >Projects</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="aboutme" class="active">About me</a></li>
+            <li><a href="projects" >Projects</a></li>
 
 
 
