--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 										</p>
 									<ul class="actions pt-12">
-										<li><a href="aboutme.html" class="button">Learn more</a></li>
+										<li><a href="aboutme" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -84,7 +84,7 @@
 									<h2 class="text-xl font-bold pb-4">Projects</h2>
 									<p>I use my passion and skills to create digital products and innovative solutions </p>
 									<ul class="actions pt-12">
-										<li><a href="projects.html" class="button">Learn more</a></li>
+										<li><a href="projects" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
