--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 <head>
     <title>Amira Chebbi</title>
@@ -22,9 +23,9 @@
     <a href="index.html" class="title">Amira Chebbi</a>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutme.html" >About me</a></li>
-            <li><a href="projects.html" class="active" >Projects</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="aboutme" >About me</a></li>
+            <li><a href="projects" class="active" >Projects</a></li>
 
 
 
