--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
 							</p>
 							<div class="mt-8 split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="https://formsubmit.co/amira98chebbi@gmail.com">
 										<div class="fields">
+											<input type="hidden" name="_next" value="thanks">
 											<div class="field half">
 												<label for="name">Name</label>
 												<input type="text" name="name" id="name" />
