--- a/thanks.html
+++ b/thanks.html
@@ -10,8 +10,24 @@
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
-<h1 class="major">Thank you for contacting me</h1>
-<a href="index">Home</a><
+<header id="header">
+    <a href="index.html" class="title">Amira Chebbi</a>
+    <nav>
+        <ul>
+            <li><a href="index">Home</a></li>
+            <li><a href="aboutme" >About me</a></li>
+            <li><a href="projects" class="active" >Projects</a></li>
 
+
+
+
+        </ul>
+    </nav>
+</header>
+<section id="main" class="wrapper">
+<div class="inner">
+<h1 class="major text-3xl">Thank you for contacting me</h1>
+</div>
+</section>
 </body>
 </html>
