updates in thanks page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 								<section>
 									<form method="post" action="https://formsubmit.co/amira98chebbi@gmail.com">
 										<div class="fields">
-											<input type="hidden" name="_next" value="thanks">
+											<input type="hidden" name="_next" value="https://amira-98.github.io/thanks">
 											<div class="field half">
 												<label for="name">Name</label>
 												<input type="text" name="name" id="name" />
