updates in thanks page

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 									<form method="post" action="https://formsubmit.co/amira98chebbi@gmail.com">
 										<div class="fields">
 											<input type="hidden" name="_next" value="https://amira-98.github.io/thanks">
+											<input type="hidden" name="_captcha" value="false">
+
+
 											<div class="field half">
 												<label for="name">Name</label>
 												<input type="text" name="name" id="name" />
