--- a/aboutme.html
+++ b/aboutme.html
@@ -114,7 +114,7 @@ Websites for galleries</span>
                             <div class="col-span-2">
                                 <span class="text-left text-lg font-bold text-white">Higher Institut of Management in Tunis :  </span>
                                 <span class="text-lg text-white"> Bachelor of Science in IT Management</span><br>
-                                <span class="text-md text-left text-gray-400">Enrolled since September 2020 to present</span>
+                                <span class="text-md text-left text-gray-400">Attended from September 2016 to June 2019</span>
                             </div>
                             <div>
                                 <img class="pl-24 "  src="images/logo-isg-tunis.svg">
@@ -133,7 +133,7 @@ Websites for galleries</span>
 <footer id="footer" class="wrapper alt">
     <div class="inner">
         <ul class="menu">
-            <li>&copy; Untitled. All rights reserved.</li>
+            <li></li>
         </ul>
     </div>
 </footer>
