--- a/thanks.html
+++ b/thanks.html
@@ -29,5 +29,12 @@
 <h1 class="major text-3xl">Thank you for contacting me</h1>
 </div>
 </section>
+<footer id="footer" class="wrapper style1-alt">
+    <div class="inner">
+        <ul class="menu">
+            <li></li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
