--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
     </div>
 </div>
 
-
+        </div>
     </section>
 
 </div>
@@ -99,7 +99,7 @@
 <footer id="footer" class="wrapper alt">
     <div class="inner">
         <ul class="menu">
-            <li>&copy; Untitled. All rights reserved.</li>
+            <li></li>
         </ul>
     </div>
 </footer>
