--- a/index.html
+++ b/index.html
@@ -115,15 +115,10 @@
 									<p class="text-justify">Three years ago , I discovered my passion for creating mobile solutions .
 										There is a strong feeling of pride , when you see your application being used by millions of people and help the to solve problems. </p>
 								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Data Mining and Machine Learning</h3>
-									<p class="text-justify">Thanks to my studies I had the opportunity to get strong knowledge in Data Mining and Machine learning .
-										I had also the opportunity to work on projects and participate in challenges.</p>
-								</section>
+
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Natural Language Processing</h3>
+									<h3>Natural Language Processing - Data Mining and Machine Learning</h3>
 									<p class="text-justify">Since my first year at the university , I was always asking myself how does search engines find the best results for our queries .
 										And then I discovered the NLP domain, and I had the possibility to answer all the unclear things that went to my mind.
 									Now I always tried to be up-to-date in the NLP domain and to work on real projects. </p>
@@ -133,6 +128,11 @@
 									<h3>Entrepreneurship and Innovation</h3>
 									<p class="text-justify">Entrepreneurship and innovation became the keys for our survive in our world. It is so important to have technical skills .
 										But I have to admit that without creativity and without basic knowledge in those domains you will find yourself at the end of the ranking list.  </p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Stress Management and Communication skills</h3>
+									<p class="text-justify"></p>
 								</section>
 							</div>
 							<!--<ul class="actions">
